--- a/src/vue2教程/01介绍/01声明式渲染/文本插值.html
+++ b/src/vue2教程/01介绍/01声明式渲染/文本插值.html
@@ -2,7 +2,8 @@
     <!-- 声明式渲染 -->
    {{message}}
 </div>
-<script src="../../../../node_modules/vue/dist/vue.js"></script>
+<!-- <script src="../../../../node_modules/vue/dist/vue.js"></script> -->
+<script src="/node_modules/vue/dist/vue.js"></script>
 <script>
    const app = new Vue({
        el:'#app',
