--- a/src/vue2教程/04计算属性和侦听器/基础例子.html
+++ b/src/vue2教程/04计算属性和侦听器/基础例子.html
@@ -2,7 +2,7 @@
     <p>message: {{message}}</p>
     <p>Reversed message: {{reverseMessage()}}</p>
 </div>
-<script src="https://gcore.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+<script src="/node_modules/vue/dist/vue.js"></script>
 <script>
     let vm = new Vue({
         el:"#app",
