--- a/src/vue2教程/01介绍/04组件化应用构建/组件化应用构建.html
+++ b/src/vue2教程/01介绍/04组件化应用构建/组件化应用构建.html
@@ -1,23 +1,56 @@
-<div id="app">
-    <ol>
+<!-- <div id="app" style="display: flex;"> -->
+<div id="app" style="display: flex;">
     <todo-item v-for="item in groceryList" v-bind:todo="item" v-bind:key="item.id"></todo-item>
-    </ol>
+    <div v-for="item in groceryList">
+        <todo-item ></todo-item>
+    </div>
 </div>
 <script src="https://gcore.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 <script>
     Vue.component('todo-item', {
         props: ['todo'],
-        template: '<li>{{ todo.text }}</li>'
+        // template: `
+        //     <div :style="{ display: parameterValue ? 'flex' : 'none' }">
+        //         <div v-if="todo.id == 0 || todo.id == 1" style="display: flex;">
+        //         <div class="fz-12">aa{{todo.text}}bb</div>
+        //         <div class="fz-12">cc{{todo.text}}dd</div>
+        //         </div>
+        //     </div>
+        // `
+         template: `
+            <div>
+                {{todo.text}}
+            </div>
+         `
     })
 
     var app7 = new Vue({
     el: '#app',
     data: {
         groceryList: [
-        { id: 0, text: '蔬菜' },
-        { id: 1, text: '奶酪' },
-        { id: 2, text: '随便其它什么人吃的东西' }
-        ]
+            {id: 0, text:"蔬菜"},
+            {id: 1, text:"奶酪"},
+            {id: 2, text:"水果"}
+        ],
+        grocery1: {
+            id:0, text:"蔬菜",
+        },
+        grocery2: {
+            id:1, text:"奶酪",
+        },
+        grocery3: {
+            id: 2, text:"水果"
+        }
     }
 })
 </script>
+
+<style>
+    .fz-12 {
+        font-size: 12px;
+        display: flex;
+    }
+    .color {
+        color: #fff;
+    }
+</style>
