--- a/src/vue2教程/04计算属性和侦听器/05侦听器.html
+++ b/src/vue2教程/04计算属性和侦听器/05侦听器.html
@@ -9,7 +9,7 @@
 <!-- 提供这些功能以保持精简。这也可以让你自由选择自己更熟悉的工具。 -->
 <script src="https://cdn.jsdelivr.net/npm/axios@0.12.0/dist/axios.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/lodash@4.13.1/lodash.min.js"></script>
-<script src="/node_modules/vue/dist/vue.js"></script>
+<script src="https://gcore.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 <script>
 var watchExampleVM = new Vue({
   el: '#watch-example',
@@ -21,7 +21,7 @@ var watchExampleVM = new Vue({
     // 如果 `question` 发生改变，这个函数就会运行
     question: function (newQuestion, oldQuestion) {
       this.answer = 'Waiting for you to stop typing...'
-      this.debouncedGetAnswer()
+      this.debouncedGetAnswer2()
     }
   },
   created: function () {
@@ -30,7 +30,8 @@ var watchExampleVM = new Vue({
     // AJAX 请求直到用户输入完毕才会发出。想要了解更多关于
     // `_.debounce` 函数 (及其近亲 `_.throttle`) 的知识，
     // 请参考：https://lodash.com/docs#debounce
-    this.debouncedGetAnswer = _.debounce(this.getAnswer, 500)
+    this.debouncedGetAnswer = _.debounce(this.getAnswer, 0)
+    this.debouncedGetAnswer2 = _.debounce(this.getAnswer2, 0);
   },
   methods: {
     getAnswer: function () {
@@ -47,6 +48,9 @@ var watchExampleVM = new Vue({
         .catch(function (error) {
           vm.answer = 'Error! Could not reach the API. ' + error
         })
+    },
+    getAnswer2: function () {
+     this.answer = "aaaa";
     }
   }
 })
