--- a/src/vue2教程/01介绍/01声明式渲染/01文本插值.html
+++ b/src/vue2教程/01介绍/01声明式渲染/01文本插值.html
@@ -3,7 +3,7 @@
    {{message}}
 </div>
 <!-- <script src="../../../../node_modules/vue/dist/vue.js"></script> -->
-<script src="/node_modules/vue/dist/vue.js"></script>
+<script src="https://gcore.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 <script>
    const app = new Vue({
        el:'#app',
