--- a/src/vue2教程/04计算属性和侦听器/利用computed同步属性.html
+++ b/src/vue2教程/04计算属性和侦听器/利用computed同步属性.html
@@ -1,5 +1,6 @@
 <div id="app">
-    {{fullName}}
+    <!-- {{fullName}} -->
+    {{firstName}}
 </div>
 <script src="https://gcore.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 <script>
