--- a/src/vue2教程/05Class与Style绑定/01动态切换class.html
+++ b/src/vue2教程/05Class与Style绑定/01动态切换class.html
@@ -1,16 +1,38 @@
 <div id="app">
-    <div>
-        
-    </div>
+    <div id="app">
+        <div :class="{'active': isActive, 'highlight': isHighlighted}">
+          动态切换类名的示例
+        </div>
+        <button @click="toggleActive">切换 Active 类</button>
+        <button @click="toggleHighlight">切换 Highlight 类</button>
+      </div>
+    
 </div>
-<script src = "/node_modules/vue/dist/vue.js"></script>
+<!-- <script src = "/node_modules/vue/dist/vue.js"></script> -->
+<script src="https://gcore.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 <script>
     let vm = new Vue({
-        id:"#app",
+        el: '#app',
         data: {
-
+            isActive: false,
+            isHighlighted: false
         },
-
+        methods: {
+            toggleActive() {
+                this.isActive = !this.isActive;
+            },
+            toggleHighlight() {
+              this.isHighlighted = !this.isHighlighted;
+            }
+        }
     });
-    let model = "";
 </script>
+<style>
+    .active {
+      background-color: lightgreen;
+    }
+
+    .highlight {
+      border: 2px solid red;
+    }
+</style>
