--- a/src/vue2教程/07列表渲染/01遍历元素/02遍历对象.html
+++ b/src/vue2教程/07列表渲染/01遍历元素/02遍历对象.html
@@ -14,6 +14,9 @@
                 </li>
             </ul>
         </div>
+        <div id="app2">
+            test
+        </div>
     </head>
     <body>
         <script>
